deploy/kw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labbook
  labels:
    app.kubernetes.io/part-of: labbook
